Cleanup JSR166 tests